# lynx

./: .gitignore  CLAUDE.md  LICENSE  README.md  cli.py  lynx.example.toml  pyproject.toml  requirements.txt  utils.py
.github/workflows/: sync-version.yml
codex/: __init__.py  ai_interface.py  chunker.py  config.py  summarizer.py
integrations/: dynamiq_nodes.py
plugins/core/: manager.py  registry.py
plugins/languages/: bash_parser.py  c_parser.py  cpp_parser.py  csharp_parser.py  css_parser.py  flutter_parser.py  java_parser.py  python_parser.py  rust_parser.py  sql_parser.py  typescript_parser.py
src/lynx/: __init__.py  cli.py  exceptions.py  utils.py
src/lynx/codex/: ai_interface.py  config.py  summarizer.py
src/lynx/integrations/: __init__.py  dynamiq_workflows.py  utils.py
src/lynx/oauth/: __init__.py  provider.py
src/lynx/plugins/: __init__.py
src/lynx/plugins/core/: __init__.py  base.py  manager.py  registry.py
src/lynx/plugins/core/builtins/: __init__.py  language_bridge.py
src/lynx/plugins/languages/: __init__.py  base.py  generic_parser.py  go_parser.py  html_parser.py  javascript_parser.py  kotlin_parser.py  nextjs_parser.py  php_parser.py  react_parser.py  ruby_parser.py  rust_parser.py  swift_parser.py  typescript_parser.py
tests/: test_oauth.py  test_staged_models.py
